# picoscope-rust-capture-rate-test

./: Cargo.toml  README.md
src/: main.rs
