[package]
name = "picoscope-rust-capture-rate-test"
version = "0.1.0"
authors = ["Jasper M-W <jasper@ngita.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
console = "0.14.1"
dialoguer = "0.8.0"
pico-sdk = "0.1.4"
signifix = "0.10.1"